crates/ruff/src/rules/flake8_executable/snapshots/ruff__rules__flake8_executable__helpers__tests__shebang_non_match.snap
---
source: crates/ruff/src/rules/flake8_executable/helpers.rs
expression: "ShebangDirective::try_extract(source)"
---
None
